# TinyWiFi

./: README.md  pyproject.toml
tests/: test_cli.py
tinywifi/: __init__.py  __main__.py  cli.py  monitor.py  scan.py
